MCP server frontend, continuous-stream restore/checkpoint, hardening, and pre-release notice